JavaExampleCollections/src/kr/co/leehana/example/exception/rejectedexecutionexception/Worker.java
package kr.co.leehana.example.exception.rejectedexecutionexception;

public class Worker implements Runnable {

	@Override
	public void run() {
		
	}
}
